[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyglvis"
dynamic = ["version"]
description = "GLVis widget for Jupyter notebooks"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "mfem>=4.5.2",
    "anywidget[dev]==0.9.0"
]

[project.urls]
homepage = "https://glvis.org"
repostiory = "https://github.com/glvis/pyglvis"

[tool.hatch.version]
path = "glvis/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["glvis"]
